[gd_scene load_steps=11 format=3 uid="uid://bxfl0ksh15n7c"]

[ext_resource type="FontFile" uid="uid://du3421x6ajkbl" path="res://assets/fonts/digitalix.ttf" id="1"]
[ext_resource type="Theme" uid="uid://cya5ponahvi3x" path="res://assets/PowerPong.tres" id="1_klvox"]
[ext_resource type="Script" path="res://src/control/Options.gd" id="5"]

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="8"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Options" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_klvox")
color = Color(0, 0, 0, 1)
script = ExtResource("5")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="UpperSpace" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = SubResource("2")
text = "PLAYER NAME"

[node name="NameEdit" type="LineEdit" parent="VBox"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = SubResource("3")

[node name="MiddleSpace1" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="AudioLabel" type="Label" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = SubResource("4")
text = "AUDIO"

[node name="MusicCheck" type="CheckButton" parent="VBox"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = SubResource("5")
text = "music"

[node name="EffectsCheck" type="CheckButton" parent="VBox"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = SubResource("6")
text = "EFFECTS"

[node name="MiddleSpace2" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Save" type="Button" parent="VBox"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = SubResource("7")
text = "SAVE"

[node name="Cancel" type="Button" parent="VBox"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = SubResource("8")
text = "CANCEL"

[node name="BottomSpace" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[connection signal="pressed" from="VBox/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBox/Cancel" to="." method="_on_Cancel_pressed"]
